--- a/react-ui/src/components/Jumbotron/Jumbotron.css
+++ b/react-ui/src/components/Jumbotron/Jumbotron.css
@@ -1,5 +1,5 @@
 .jumbotron {
-  background-image: url("http://www.freetoursbyfoot.com/wp-content/uploads/2013/08/New-York-Skyline-Downdown-view.jpg");
+  background-image: url("./nyskyline.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
